--- a/templates/indview.html
+++ b/templates/indview.html
@@ -23,7 +23,8 @@
 
   <meta content="" name="keywords">
   <meta content="" name="description">
-  <link href="{% static 'images/favicon.png'%}" rel="icon">
+  <link rel="icon" href="https://mhgbtcuwzn-2-flywheel.netdna-ssl.com/wp-content/uploads/2019/08/cropped-virtusa-icon-512px-32x32.png" sizes="32x32">
+  <link rel="icon" href="https://mhgbtcuwzn-2-flywheel.netdna-ssl.com/wp-content/uploads/2019/08/cropped-virtusa-icon-512px-192x192.png" sizes="192x192">
   <link href="{% static 'images/apple-touch-icon.png'%}" rel="apple-touch-icon">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
   <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
@@ -32,7 +33,7 @@
 
   <!-- Bootstrap CSS File -->
   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/pptxjs.css' %}"> -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantification32.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantification33.css' %}">
   <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -47,7 +48,7 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  
+
 
   <!-- Uncomment below i you want to use a preloader -->
   <!-- <div id="preloader"></div> -->
@@ -561,15 +562,15 @@ debugger;
 
                >
                <a href="{%url 'practices' %}">Our Practices</a></li>
-             <li
-             {% if '/services/' == request.path %}
-                 class= "nav-item active"
-             {% else %}
-                class= "nav-item "
-             {% endif %}
+               <li
+               {% if '/services/' == request.path %}
+                   class= "nav-item active"
+               {% else %}
+                  class= "nav-item "
+               {% endif %}
 
-             >
-             <a href="{%url 'services' %}">Solutions</a></li>
+               >
+               <a href="{%url 'services' %}?buisnessImperative=True">Solutions</a></li>
              <li><a href="#portfolio">Innovation</a></li>
 
            </ul>
