--- a/virtusa/static/css/style_updated20.css
+++ b/virtusa/static/css/style_updated20.css
@@ -252,7 +252,8 @@ font-weight: 700;
   /* background: url("../images/intro-bg.jpg") center bottom no-repeat; */
   background:rgba(0,106, 165, 0.8);
   background-size: cover;
-  padding: 200px 0 120px 0;
+  padding: 97px 0 120px 0;
+  height: 500px;
 }
 
 #intro .intro-img {
