--- a/templates/indview.html
+++ b/templates/indview.html
@@ -8,19 +8,8 @@
   <title>{{model.name}}</title>
   <!-- <meta id="my-data" data-name="" data-other={{model.inputs_csv}}> -->
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-
-  <script src="{% static 'lib/PapaParse/papaparse.js' %}"></script>
-  <script src="{% static 'lib/PapaParse/papaparse.min.js'%}"></script>
   <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
-<!--
-    <script  src="{% static 'js/jquery-1.11.3.min.js' %}"></script> -->
-  <!-- <script  src="{% static 'lib/pptX/pptxjs.min.js' %}"></script> -->
-
-
-
-
   <meta content="" name="keywords">
   <meta content="" name="description">
   <link rel="icon" href="https://mhgbtcuwzn-2-flywheel.netdna-ssl.com/wp-content/uploads/2019/08/cropped-virtusa-icon-512px-32x32.png" sizes="32x32">
@@ -48,21 +37,8 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-
-  <!-- Uncomment below i you want to use a preloader -->
-  <!-- <div id="preloader"></div> -->
-
-  <!-- JavaScript Libraries -->
   <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
-    <!-- <script  src="{% static 'js/jszip.min.js' %}"></script>
-  <script  src="{% static 'js/filereader.js' %}"></script>
-
-  <script  src="{% static 'js/d3.min.js' %}"></script>
-  <script src="{% static 'js/nv.d3.min.js' %}"></script>
-  <script  src="{% static 'js/pptxjs.js' %}"></script> -->
-  <!-- <script  src="{% static 'js/ppt2png.js' %}"></script> -->
   <script src="{% static 'lib/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
   <script src="{% static 'lib/easing/easing.min.js' %}"></script>
   <script src="{% static 'lib/mobile-nav/mobile-nav.js' %}"></script>
@@ -77,153 +53,60 @@
     <script src="{% static 'js/main.js' %}"></script>
 
 
+<script>
 
-  <script>
+function init(){
+     document.getElementById('upload').addEventListener('change', handleFileSelect, false);
+}
 
-           function init(){
-
-               document.getElementById('upload').addEventListener('change', handleFileSelect, false);
-
-  }
-
-//   anychart.onDocumentReady(function() {
-// debugger;
-//     // set the data
-//
-//
-//   });
-
-
-           function arrayToTable(tableData) {
-
-               data =tableData;
-               var table = $('<table></table>');
-               for (i = 0; i < data.length; i = i + 1) {
-                    row = $('<tr />');
-               for (j = 0; j < data[i].length; j = j + 1) {
-                    if (i === 0) {
-
-                        row.append($('<th />').html(data[i][j]));
-                     } else {
-                        row.append($('<td />').html(data[i][j]));
+function arrayToTable(tableData) {
+      data =tableData;
+      var table = $('<table></table>');
+      for (i = 0; i < data.length; i = i + 1) {
+          row = $('<tr />');
+          for (j = 0; j < data[i].length; j = j + 1) {
+               if (i === 0) {
+                   row.append($('<th />').html(data[i][j]));
+                     }
+               else {
+                   row.append($('<td />').html(data[i][j]));
                     }
                   }
-                    table.append(row);
+               table.append(row);
                }
                return table;
                }
 
 
-           $(window).load(function(){
+$(window).load(function(){
               debugger;
-
-
         $('#button1').on('click', function(event) {
-             $('.iframe1').toggle('show');
+               $('.iframe1').toggle('show');
            });
 
+        $("#dbtn").attr("disabled", true);
+        $("#Submit").click(function(){
+          debugger;
+           myMap = new Map();
+           $("input[class=form-control]").each(function() {
+           debugger;
+           var id = $(this).attr("title");
+           var email = $(this).val();
+           name = id;
+           value = email;
+           myMap.set(name, value);
+         });
 
-                $("#dbtn").attr("disabled", true);
-
-
-           $("#Submit").click(function(){
-
-debugger;
-myMap = new Map();
-$("input[class=form-control]").each(function() {
-debugger;
-    var id = $(this).attr("title");
-    var email = $(this).val();
-
-
-    name = id;
-    value = email;
-
-     myMap.set(name, value);
-});
-
-
-
-
-               // var table = document.querySelector('table'),
-               //     rows = table.getElementsByTagName('tr'),
-               //        i, j, cells, customerId,obj={}, myMap = new Map();
-               //      for (i = 0, j = rows.length; i < j; ++i) {
-               //          cells = rows[i].getElementsByTagName('td');
-               //          if (!cells.length) {
-               //              continue;
-               //           }
-               //
-               //            name = cells[0].innerHTML? cells[0].innerHTML.trim():"";
-               //            value = cells[1].innerHTML ? cells[1].innerHTML.trim() : "";
-               //            myMap.set(name, value);
-               //        }
-               //
-                         function mapToObj(map){
-                             var obj = {}
-                             map.forEach(function(v, k){
-                               obj[k] = v
-                            })
-                          return obj
-                         }
+           function mapToObj(map){
+               var obj = {}
+               map.forEach(function(v, k){
+                  obj[k] = v
+                })
+              return obj
+            }
 
                             var myJson = {};
                             myJson= mapToObj(myMap);
-
-                            var data = [
-                                {x: "RUL", value: 193.43209071045},
-                                {x: "Time to an event", value: 239.8608903145},
-
-                            ];
-
-                            // create the chart
-                            var chart = anychart.pie();
-
-                            // set the chart title
-                            chart.title("Prediction");
-
-                            // add the data
-                            chart.data(data);
-
-                            // display the chart in the container
-                            chart.container('containers');
-                            chart.draw();
-
-
-
-//                             var chart = new CanvasJS.Chart("containers", {
-// 	animationEnabled: true,
-// 	exportEnabled: true,
-// 	theme: "light1", // "light1", "light2", "dark1", "dark2"
-// 	title:{
-// 		text: "Simple Column Chart with Index Labels"
-// 	},
-// 	data: [{
-// 		type: "column", //change type to bar, line, area, pie, etc
-// 		//indexLabel: "{y}", //Shows y value on all Data Points
-// 		indexLabelFontColor: "#5A5757",
-// 		indexLabelPlacement: "outside",
-// 		dataPoints: [
-// 			{ x: 10, y: 71 },
-// 			{ x: 20, y: 55 },
-// 			{ x: 30, y: 50 },
-// 			{ x: 40, y: 65 },
-// 			{ x: 50, y: 92, indexLabel: "Highest" },
-// 			{ x: 60, y: 68 },
-// 			{ x: 70, y: 38 },
-// 			{ x: 80, y: 71 },
-// 			{ x: 90, y: 54 },
-// 			{ x: 100, y: 60 },
-// 			{ x: 110, y: 36 },
-// 			{ x: 120, y: 49 },
-// 			{ x: 130, y: 21, indexLabel: "Lowest" }
-// 		]
-// 	}]
-// });
-// chart.render();
-
-               //              // myJson=JSON.stringify(myJson)
-               //              var res = document.getElementById('result');
                                       debugger;
 
 
@@ -265,53 +148,8 @@ debugger;
                                         data: JSON.stringify(myJson)
                                     });
 
-//                 $.post('{{ model.endpoint }}',myJson).done(function(data){
-//                     debugger;
-//
-//                         var tbody = document.getElementById("matchData");
-//                         var headerNames = Object.getOwnPropertyNames(data[0]);
-//                         var columnCount = headerNames.length;
-// //Add the header row.
-//                         var row = tbody.insertRow(-1);
-//                         for (var i = 0; i < columnCount; i++) {
-//                              var headerCell = document.createElement("TH");
-//                              headerCell.innerHTML = headerNames[i];
-//                             row.appendChild(headerCell);
-//                         }
-// // loop through data source
-//                         for (var i = 0; i < data.length; i++) {
-//                         var tr = document.createElement("tr");
-//                         for(var colName in data[i]) {
-//                            var td = document.createElement("td");
-//                            td.innerHTML = data[i][colName];
-//                            if(colName=="Location")
-//                                td.className = "centered";
-//                            tr.appendChild(td);
-//                         }
-//                         tbody.appendChild(tr);
-//                         }
-//
-//                       // res.innerHTML = data;
-//                })
+                      });
 
-              });
-
-
-
-               //
-               // $('#table_data').on('click',"td",function(e){
-               //    debugger;
-               //    var OriginalContent = $(this).text();
-               //    $(this).addClass("cellEditing");
-               //    $(this).html("<input type='text' value='" + OriginalContent + "' />");
-               //    $(this).children().first().focus();
-               //    $(this).children().first().keypress(function (e) {
-               //     if (e.which == 13) { var newContent = $(this).val();
-               //         $(this).parent().text(newContent); $(this).parent().removeClass("cellEditing"); } });
-               //         $(this).children().first().blur(function(){ $(this).parent().text(OriginalContent);
-               //         $(this).parent().removeClass("cellEditing");
-               //       });
-               //     });
 
 
               $("#upload").bind("change", function(evt) {
@@ -367,119 +205,6 @@ debugger;
 
                      });
               })
-
-
-
-
-
-  //
-  //                      $(document).on('click', '.btn_cancel', function(event)
-	// {
-  //   debugger;
-	// 	event.preventDefault();
-  //
-	// 	var tbl_row = $(this).closest('tr');
-  //
-	// 	var row_id = tbl_row.attr('row_id');
-  //
-	// 	//hide save and cacel buttons
-	// 	tbl_row.find('.btn_save').hide();
-	// 	tbl_row.find('.btn_cancel').hide();
-  //
-	// 	//show edit button
-	// 	tbl_row.find('.btn_edit').show();
-  //
-	// 	//make the whole row editable
-	// 	tbl_row.find('.row_data')
-	// 	.attr('edit_type', 'click')
-	// 	.removeClass('bg-warning')
-	// 	.css('padding','')
-  //
-	// 	tbl_row.find('.row_data').each(function(index, val)
-	// 	{
-	// 		$(this).html( $(this).attr('original_entry') );
-	// 	});
-	// });
-  //
-  //
-  // $(document).on('click', '.btn_edit', function(event)
-  // 	{
-  //     debugger;
-  // 		event.preventDefault();
-  // 		var tbl_row = $(this).closest('tr');
-  //
-  // 		var row_id = tbl_row.attr('row_id');
-  //
-  // 		tbl_row.find('.btn_save').show();
-  // 		tbl_row.find('.btn_cancel').show();
-  //
-  // 		//hide edit button
-  // 		tbl_row.find('.btn_edit').hide();
-  //
-  // 		//make the whole row editable
-  // 		tbl_row.find('.row_data')
-  // 		.attr('contenteditable', 'true')
-  // 		.attr('edit_type', 'button')
-  // 		.addClass('bg-warning')
-  // 		.css('padding','3px')
-  //
-  // 		//--->add the original entry > start
-  // 		tbl_row.find('.row_data').each(function(index, val)
-  // 		{
-  // 			//this will help in case user decided to click on cancel button
-  // 			$(this).attr('original_entry', $(this).html());
-  // 		});
-  // 		//--->add the original entry > end
-  //
-  // 	});
-  //
-  //
-  //   $(document).on('click', '.btn_save', function(event)
-  //   	{
-  //   		event.preventDefault();
-  //   		var tbl_row = $(this).closest('tr');
-  //
-  //   		var row_id = tbl_row.attr('row_id');
-  //
-  //
-  //   		//hide save and cacel buttons
-  //   		tbl_row.find('.btn_save').hide();
-  //   		tbl_row.find('.btn_cancel').hide();
-  //
-  //   		//show edit button
-  //   		tbl_row.find('.btn_edit').show();
-  //
-  //
-  //   		//make the whole row editable
-  //   		tbl_row.find('.row_data')
-  //   		.attr('edit_type', 'click')
-  //   		.removeClass('bg-warning')
-  //   		.css('padding','')
-  //
-  //   		//--->get row data > start
-  //   		var arr = {};
-  //   		tbl_row.find('.row_data').each(function(index, val)
-  //   		{
-  //   			var col_name = $(this).attr('col_name');
-  //   			var col_val  =  $(this).html();
-  //   			arr[col_name] = col_val;
-  //   		});
-  //     });
-
-    //           $("#pptResult").pptxToHtml({
-    //
-    //             pptxFileUrl:'{{model.slide}}',
-    //
-    // });
-
-//       var ppt2png = require('ppt2png');
-//     ppt2png('{{model.slide}}', './output/img', function( err ){
-//     if(err) {
-//         console.log(err);
-//     } else {
-//         console.log('convert successful.');
-//     }
-// });
 
 
 
